[package]
name = "solana-e"
version = "0.1.1"
edition = "2021"
publish = false
license = "UNLICENSED"
authors = ["ffimnsr <ffimnsr@gmail.com>"]
description = "This service provides simple NFT wallet viewer functionality"
homepage = "https://se-same.com"
repository = "https://github.com/ffimnsr/solana-e"
documentation = "https://github.com/ffimnsr/solana-e"
readme = "README.md"

[[bin]]
name = "solana-e"
path = "src/daemon/bin/main.rs"

[dependencies]
dotenv = "0.15"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["tracing-log", "fmt", "json"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
tera = "1.17"
actix-web = "4.2"
solana-sdk = "1.14"
solana-account-decoder = "1.14"
solana-client = "1.14"
spl-token = "3.5"
mpl-token-metadata = "1.4"
serde = "1.0"
serde_json = "1.0"
borsh = "0.9"
bincode = "1.3"
base64 = "0.13"
reqwest = "0.11"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
